# Multi-Agent-Mobile-UI-Assistant-

./: .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml
docs/: LLM_INTEGRATION_SUMMARY.md  LLM_SETUP.md  STREAMLIT_GUIDE.md  STREAMLIT_MIGRATION.md  TESTING_QUICK_REF.md  TEST_SUITE_SUMMARY.md
scripts/: run_tests.sh
src/multi_agent_mobile_ui_assistant/: __init__.py  agent_example.py  android_tools_mcp.py  example.py  figma_mcp.py  llm_config.py  mcp_tools.py  streamlit_interface.py  ui_generator.py
tests/: README.md  __init__.py  conftest.py  test_agent_example.py  test_android_tools_mcp.py  test_example.py  test_figma_mcp.py  test_llm_config.py  test_mcp_tools.py  test_streamlit_interface.py  test_ui_generator.py
