[project]
name = "multi-agent-mobile-ui-assistant"
version = "0.1.0"
description = "A multi-agent system for generating Jetpack Compose UI code from natural language"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-core>=1.0.4",
    "langchain-openai>=1.0.2",
    "langchain-ollama>=0.2.0",
    "langgraph>=1.0.3",
    "python-dotenv>=1.0.0",
    "streamlit>=1.39.0",
    "mcp>=1.0.0",
    "requests>=2.31.0",
    "pygithub>=2.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src/multi_agent_mobile_ui_assistant",
    "--cov-report=term-missing",
    "--cov-report=html",
]
